.tmux.conf -g focus-events on

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ bind C-a send-prefix
 set -g status-bg colour241 
 set -g mode-keys vi
 set -g display-time 3500
+set -g focus-events on
 
 unbind '"'
 unbind %
