--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,7 @@ set -g status-left "\
 #[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],} ❐ #S \
 #[fg=colour241, bg=colour237]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, #[fg=colour167]⚽︎,}\
 #[fg=colour3, bold] ⟫ #(~/.tmux.battery.sh) \
-#[fg=colour3]‡#[fg=colur3, bold] #(~/.tmux.python.sh) \
+#[fg=colour3]‡#[fg=colour3, bold] #(~/.tmux.python.sh) \
 #[fg=colour3]‡#[fg=colour3, bold] #(~/.tmux.go.sh) \
 #[fg=colour237, bg=colour241] "
 
