--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-set -g status-bg colour241 
+set -g status-bg color255
 set -g mode-keys vi
 set -g display-time 3500
 set -g focus-events on
@@ -23,15 +23,16 @@ set -g status-left-length 45
 set -g status-right-length 150
 
 set -g status-left "\
-#[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],} ❐ #S \
-#[fg=colour241, bg=colour237]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, #[fg=colour167]⚽︎,}\
-#[fg=colour3, bold] ⟫ #(~/.tmux.battery.sh) \
-#[fg=colour3]‡#[fg=colour3, bold] #(~/.tmux.python.sh) \
-#[fg=colour3]‡#[fg=colour3, bold] #(~/.tmux.go.sh) \
-#[fg=colour237, bg=colour241] "
+#[fg=color7,bg=color241]#{?client_prefix,#[bg=color167],} ❐ #S \
+#[fg=color241,bg=color237]#{?client_prefix,#[fg=color167],}#{?window_zoomed_flag, #[fg=color167]⚽︎,}\
+#[fg=color3,bold] ⟫ \
+#[fg=color3]  #[fg=color3,bold] \
+#[fg=color3]   #[fg=color3,bold] \
+#[fg=color237, bg=color255] "
 
-set -g status-right " #[fg=colour3, bg=colour241]#[fg=colour237, bg=colour3] #h \
-#[fg=colour223, bg=colour237] #D  #[fg=colour246, bg=colour237] %a %B %d %Y\
-#[fg=colour109, bold] ❮ %H:%M  #[fg=colour248, bg=colour239]"
+set -g status-right "\
+#[fg=color3,bg=color255]#[fg=color237,bg=color3] #h \
+#[fg=color223,bg=color237] #D #[fg=color246,bg=color237] %a %B %d %Y\
+#[fg=color109,bold]  %H:%M #[fg=color248,bg=color239]"
 
 setw -g history-limit 1024 
