--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,12 +23,12 @@ set -g status-left-length 45
 set -g status-right-length 150
 
 set -g status-left "\
-#[fg=color7,bg=color241]#{?client_prefix,#[bg=color167],} ❐ #S \
-#[fg=color241,bg=color237]#{?client_prefix,#[fg=color167],}#{?window_zoomed_flag, #[fg=color167]⚽︎,}\
-#[fg=color3,bold] ⟫ \
-#[fg=color3]  #[fg=color3,bold] \
-#[fg=color3]   #[fg=color3,bold] \
-#[fg=color237, bg=color255] "
+#[fg=color7,bg=color241]#{?client_prefix,#[bg=color167],} 🚽 #S \
+#[fg=color241,bg=color237]#{?client_prefix,#[fg=color167],}#{?window_zoomed_flag, #[fg=yellow] 📣 ,}\
+#[fg=color3,bold] 🌕🌑 \
+#[fg=color3] 🔋 #[fg=color3,bold] \
+#[fg=color3] ⚡ #[fg=color3,bold] \
+#[fg=color237, bg=color255]⟫"
 
 set -g status-right "\
 #[fg=color3,bg=color255]#[fg=color237,bg=color3] #h \
