--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,6 @@ set -g status-left "\
 set -g status-right "\
 #[fg=color3,bg=color255]#[fg=color237,bg=color3] #h \
 #[fg=color223,bg=color237] #D #[fg=color246,bg=color237] %a %B %d %Y\
-#[fg=color109,bold]  %H:%M #[fg=color248,bg=color239]"
+#[fg=color109,bold]  %H:%M ⏳ #[fg=color248,bg=color239]"
 
 setw -g history-limit 1024 
