--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
+# for i in {0..255}; do printf "\x1b[7m\x1b[38;5;${i}m[  COLOR${i}  ]\x1b[0m "; if ! ((($i+1)%8)); then echo; fi; done
+
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-set -g status-bg color255
+set -g status-bg color15
 set -g mode-keys vi
 set -g display-time 3500
 set -g focus-events on
@@ -28,10 +30,10 @@ set -g status-left "\
 #[fg=color3,bold] 🌕🌑 \
 #[fg=color3] 🔋 #[fg=color3,bold] \
 #[fg=color3] ⚡ #[fg=color3,bold] \
-#[fg=color237, bg=color255]⟫"
+#[fg=color237, bg=color15]⟫"
 
 set -g status-right "\
-#[fg=color3,bg=color255]#[fg=color237,bg=color3] #h \
+#[fg=color3,bg=color15]#[fg=color237,bg=color3] #h \
 #[fg=color223,bg=color237] #D #[fg=color246,bg=color237] %a %B %d %Y\
 #[fg=color109,bold]  %H:%M ⏳ #[fg=color248,bg=color239]"
 
