--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# for i in {0..255}; do printf "\x1b[7m\x1b[38;5;${i}m[  COLOR${i}  ]\x1b[0m "; if ! ((($i+1)%8)); then echo; fi; done
+# for i in {0..255}; do printf "\x1b[7m\x1b[38;5;${i}m[  COLOR$(printf "%03d" $i)  ]\x1b[0m "; if ! ((($i+1)%8)); then echo; fi; done
 
 set -g prefix C-a
 unbind C-b
