--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,6 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-set -g status-bg color15
 set -g mode-keys vi
 set -g display-time 3500
 set -g focus-events on
@@ -24,17 +23,19 @@ set -g pane-base-index 1
 set -g status-left-length 45
 set -g status-right-length 150
 
+set -g status-bg color241
+
 set -g status-left "\
-#[fg=color7,bg=color241]#{?client_prefix,#[bg=color167],} 🚽 #S \
+#[fg=color7,bg=color241,bold]#{?client_prefix,#[bg=color167],} 🚽 #S \
 #[fg=color241,bg=color237]#{?client_prefix,#[fg=color167],}#{?window_zoomed_flag, #[fg=yellow] 📣 ,}\
 #[fg=color3,bold] 🌕🌑 \
 #[fg=color3] 🔋 #[fg=color3,bold] \
 #[fg=color3] ⚡ #[fg=color3,bold] \
-#[fg=color237, bg=color15]⟫"
+#[fg=color237, bg=color241]⟫ "
 
 set -g status-right "\
-#[fg=color3,bg=color15]#[fg=color237,bg=color3] #h \
-#[fg=color223,bg=color237] #D #[fg=color246,bg=color237] %a %B %d %Y\
-#[fg=color109,bold]  %H:%M ⏳ #[fg=color248,bg=color239]"
+#[fg=color3,bg=color241]#[fg=color237,bg=color3] #h \
+#[fg=color223,bg=color237] #D #[fg=color246,bg=color237,bold] %a %B %d %Y \
+#[fg=color109,bold] %H:%M ⏳ #[fg=color248,bg=color239]"
 
 setw -g history-limit 1024 
