--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -1,6 +1,7 @@
 ###ytdl=no
 ###ytdl-raw-options=proxy=http://172.16.0.31:3128
 ontop=no
+quiet
 
 ###hwdec=auto
 ###panscan=1.0
@@ -35,8 +36,6 @@ osd-on-seek=msg-bar
 osd-font=URW Gothic
 osd-playing-msg='Playing: ${filename}'
 
-term-osd=force
-term-osd-bar
 term-osd-bar-chars=[Q|-]
 
 sub=no
