--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -1,7 +1,6 @@
 ###ytdl=no
 ###ytdl-raw-options=proxy=http://172.16.0.31:3128
 ontop=no
-quiet
 
 ###hwdec=auto
 ###panscan=1.0
@@ -36,7 +35,10 @@ osd-on-seek=msg-bar
 osd-font=URW Gothic
 osd-playing-msg='Playing: ${filename}'
 
+term-osd=force
+term-osd-bar=no
 term-osd-bar-chars=[Q|-]
+term-status-msg="${?pause==yes:|}${?pause==no:>} ${playback-time} [${duration}] (${percent-pos}%) x${speed} ${frame-drop-count} | Vol: ${volume}% | C: ${contrast}  S: ${saturation}  B: ${brightness}  G: ${gamma} | Zoom: ${video-zoom} | ${video-codec}/${audio-codec} ${width}x${height} ${cache-speed} [${playlist-pos-1}/${playlist/count}]  ${?file-size:}"  
 
 sub=no
 sub-scale=1
