--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -38,7 +38,7 @@ osd-playing-msg='Playing: ${filename}'
 term-osd=force
 term-osd-bar=no
 term-osd-bar-chars=[Q|-]
-term-status-msg="${?pause==yes:|}${?pause==no:>} ${playback-time} [${duration}] (${percent-pos}%) x${speed} ${frame-drop-count} | Vol: ${volume}% | C: ${contrast}  S: ${saturation}  B: ${brightness}  G: ${gamma} | Zoom: ${video-zoom} | ${video-codec}/${audio-codec} ${width}x${height} ${cache-speed} [${playlist-pos-1}/${playlist/count}]  ${?file-size:}"  
+term-status-msg="${?pause==yes:|}${?pause==no:>} ${playback-time} [${duration}] (${percent-pos}%) x${speed} ${frame-drop-count} | Vol: ${volume}% | C: ${contrast}  S: ${saturation}  B: ${brightness}  G: ${gamma} | Zoom: ${video-zoom} | ${video-codec}/${audio-codec} ${width}x${height} | ${cache-speed} [${playlist-pos-1}/${playlist/count}]  ${?file-size:}"  
 
 sub=no
 sub-scale=1
