--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ set -g status-left "\
 #[fg=color3,bold] 🌕🌑 \
 #[fg=color3] 🔋 #[fg=color3,bold] \
 #[fg=color3] ⚡ #[fg=color3,bold] \
-#[fg=color237, bg=color241]⟫ "
+#[fg=color237, bg=color241] "
 
 set -g status-right "\
 #[fg=color3,bg=color241]#[fg=color237,bg=color3] #h \
