--- a/qemu.config
+++ b/qemu.config
@@ -1,4 +1,4 @@
-PATH=$PATH:~/Library/Python/3.9/bin ./configure --target-list=x86_64-softmmu
+PATH=$PATH:/Library/Frameworks/Python.framework/Versions/Current/bin ./configure --target-list=x86_64-softmmu
   --enable-virtfs
   --enable-tools
 ###  --disable-docs
