--- a/.gitconfig
+++ b/.gitconfig
@@ -7,8 +7,8 @@ email = 91642447+a7ir3za@users.noreply.github.com
 	br = branch
 	co = checkout
 	ct = commit
-	gl = log --all --graph --decorate --format=gline
+  gl = log --all --graph --decorate --format=gline --date=format:%d.%m.%y
 [tag]
 	sort = -creatordate
 [pretty]
-	gline = "%C(auto)%h%d %s [%cn; %C(yellow)%cr%C(auto)]"
+	gline = "%C(auto)%h%d %s [%cn; %C(yellow)%cr%C(auto) %C(red)%cd%C(auto)]"
