.mpv/input.conf

--- a/.mpv/input.conf
+++ b/.mpv/input.conf
@@ -1,2 +1,27 @@
+BS revert-seek
+SHIFT+BS set speed 1.0; set gamma 0; set brightness 0; set contrast 0; set saturation 0; set hue 0; show-text "Speed/Gamma/Brightness/Contrast/Saturation/Hue -> Default"
+ALT+BS set video-pan-x 0; set video-pan-y 0; show-text "Pan -> Default"
+CTRL+BS set video-zoom 0; show-text "Zoom -> Default"
+
 9 add volume -10
 0 add volume +10
+
+h cycle-values hwdec "auto" "no"
+a cycle audio
+CTRL+j cycle secondary-sid
+
+- add video-zoom -0.1
+= add video-zoom 0.1
+
+UP seek 180
+DOWN seek -180
+RIGHT seek 25
+LEFT seek -25
+
+º set current-window-scale 0.5
+¡ set current-window-scale 1.0
+€ set current-window-scale 2.0
+¢ set current-window-scale 0.25
+
+y cycle-values video-rotate 270 180 90 0
+n cycle-values osd-level 1 2 3
