--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ set -g status-left "\
 #[fg=color237, bg=color241] "
 
 set -g status-right "\
-#[fg=color3,bg=color241]#[fg=color237,bg=color3] #h \
+#[fg=color3,bg=color241]#[fg=color237,bg=color3,bold] #h \
 #[fg=color223,bg=color237] #D #[fg=color246,bg=color237,bold] %a %B %d %Y \
 #[fg=color109,bold] %H:%M ⏳ "
 
