--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -22,7 +22,7 @@ cache-pause=no
 
 input-ipc-server=~/skt.mpv
 
-osd-duration=3115
+osd-duration=7115
 osd-margin-x=8
 osd-margin-y=8
 osd-level=3
@@ -38,7 +38,7 @@ osd-playing-msg='Playing: ${filename}'
 term-osd=force
 term-osd-bar=no
 term-osd-bar-chars=[Q|-]
-term-status-msg="${?pause==yes: ⏳}${?pause==no: 📀} ${playback-time} [${duration}] x${speed} | 🔈 ${volume}% | C: ${contrast}  S: ${saturation}  B: ${brightness}  G: ${gamma} | 🔎 ${video-zoom} | 🎬 ${video-format}/${audio-codec-name} ${width}x${height} | ⚡️ ${cache-speed} [${playlist-pos-1}/${playlist/count}]  ${?file-size:}"
+term-status-msg="${?pause==yes: ⏳}${?pause==no: 📀} ${playback-time} x${speed} | 🔈 ${volume}% | C: ${contrast}  S: ${saturation}  B: ${brightness}  G: ${gamma} | 🔎 ${video-zoom} | 🎬 ${video-format}/${audio-codec-name} ${width}x${height} | ⚡️ ${cache-speed} [${playlist-pos-1}/${playlist/count}]  ${?file-size:}"
 
 sub=no
 sub-scale=1
