--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -34,6 +34,7 @@ osd-bar-w=61
 osd-on-seek=msg-bar
 osd-font=URW Gothic
 osd-playing-msg='Playing: ${filename}'
+osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  [${percent-pos}%]  ${estimated-frame-number}/${estimated-frame-count}   ${frame-drop-count}   ${cache-speed}   ${filename} [${file-size:}]'
 
 term-osd=force
 term-osd-bar=no
