--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -26,7 +26,7 @@ input-ipc-server=~/skt.mpv
 osd-duration=7115
 osd-margin-x=8
 osd-margin-y=8
-osd-level=1
+osd-level=3
 osd-font-size=31
 osd-fractions=no
 osd-color='#706e6e'
@@ -35,7 +35,7 @@ osd-bar-w=61
 osd-on-seek=msg-bar
 osd-font=URW Gothic
 osd-playing-msg='Playing: ${filename}'
-osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  [${percent-pos}%]  ${estimated-frame-number}/${estimated-frame-count}   ${frame-drop-count}   ${cache-speed}   ${filename} [${file-size:}]'
+osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  [${percent-pos}%]  ${frame-drop-count}  ${cache-speed}   [${file-size:}] ${filename}'
 
 term-osd=force
 term-osd-bar=no
