--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -35,7 +35,7 @@ osd-bar-w=61
 osd-on-seek=msg-bar
 osd-font=URW Gothic
 osd-playing-msg='Playing: ${filename}'
-osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  [${percent-pos}%]  ${frame-drop-count}  ${cache-speed}   [${file-size:}] ${filename}'
+osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  [${percent-pos}%]  ${frame-drop-count}  ${cache-speed}   [${file-size:}]\n${filename}'
 
 term-osd=force
 term-osd-bar=no
