--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -1,7 +1,8 @@
 ###ytdl=no
 ###ytdl-raw-options=proxy=http://172.16.0.31:3128
 ytdl-format=22
-ontop=no
+ontop=yes
+speed=1.46
 
 ###hwdec=auto
 ###panscan=1.0
@@ -40,7 +41,7 @@ osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  [${percent-pos}%]  ${frame-drop
 term-osd=force
 term-osd-bar=no
 term-osd-bar-chars=[Q|-]
-term-status-msg="${?pause==yes: ⏳}${?pause==no: 📀} ${playback-time}x${speed} | 🔈 ${volume}% | C${contrast}  S${saturation}  B${brightness}  G${gamma} | 🔎 ${video-zoom} | 🎬 ${video-format}/${audio-codec-name} ${width}x${height} | ⚡️ ${cache-speed} [${playlist-pos-1}/${playlist/count}]  ${?file-size:}"
+term-status-msg="${?pause==yes: ⏳}${?pause==no: 📀} ${playback-time} x${speed} | 🔈 ${volume}% | C${contrast} S${saturation} B${brightness} G${gamma} | 🔎 ${video-zoom} | 🎬 ${video-format}/${audio-codec-name} ${width}x${height} | ⚡️ ${cache-speed} [${playlist-pos-1}/${playlist/count}]  ${?file-size:}"
 
 sub=no
 sub-scale=1
