.mpv/input.conf

--- a/.mpv/input.conf
+++ b/.mpv/input.conf
@@ -6,6 +6,9 @@ CTRL+BS set video-zoom 0; show-text "Zoom -> Default"
 9 add volume -10
 0 add volume +10
 
+' add hue -1
+\ add hue +1
+
 h cycle-values hwdec "auto" "no"
 a cycle audio
 CTRL+j cycle secondary-sid
