--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Alireza
-	email = 91642447+a7ir3za@users.noreply.github.com 
+	email = 26859725+tralireza@users.noreply.github.com
 [diff]
 	tool = vimdiff
 [alias]
