--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -49,7 +49,7 @@ sub-font-size=51
 sub-pos=95
 sub-blur=1
 sub-color=1.0/1.0/0.0/0.75
-sub-font=URW Gothic
+sub-font=Fira Code
 sub-codepage=utf-8
 sub-ass-override=force
 slang=en,eng,sp,esp
