--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -3,8 +3,8 @@
 ytdl-format=22
 ontop=yes
 speed=1.46
+hwdec=auto
 
-###hwdec=auto
 ###panscan=1.0
 save-position-on-quit
 use-filedir-conf
@@ -34,7 +34,7 @@ osd-color='#706e6e'
 osd-bar-h=3.215
 osd-bar-w=61
 osd-on-seek=msg-bar
-osd-font=URW Gothic
+###osd-font=URW Gothic
 osd-playing-msg='Playing: ${filename}'
 osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  [${percent-pos}%]  ${frame-drop-count}  ${cache-speed}   [${file-size:}]\n${filename}'
 
