.tmux.conf -> Dark/Light status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # for i in {0..255}; do printf "\x1b[48;5;${i}m[  COLOR$(printf %03d $i)  ]\x1b[0m "; if ! ((($i+1)%8)); then echo; fi; done
 
 set -g prefix C-a
-unbind C-b
 bind C-a send-prefix
+unbind C-b
 
 set -g mode-keys vi
 set -g display-time 3500
@@ -13,29 +13,18 @@ unbind %
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+setw -g history-limit 1024 
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-set -g status-interval 5
 set -g base-index 1
 set -g pane-base-index 1
 
-set -g status-left-length 50
-set -g status-right-length 150
+set -g status-interval 3
+set -g status-left-length 76
+set -g status-right-length 151
+set -g status-bg color0
+set -g status-fg color231
 
-set -g status-bg color241
-
-set -g status-left "\
-#[fg=color7,bg=color241,bold]#{?client_prefix,#[bg=color167],} 🚽 #S \
-#[fg=color241,bg=color237]#{?client_prefix,#[fg=color167],}#{?window_zoomed_flag, #[fg=yellow] 📣 ,}\
-#[fg=color3,bold] 🌕🌑 \
-#[fg=color3] 🔋 #[fg=color3,bold] \
-#[fg=color3] ⚡ #[fg=color3,bold] \
-#[fg=color237, bg=color241] "
-
-set -g status-right "\
-#[fg=color3,bg=color241]#[fg=color237,bg=color3,bold] #h \
-#[fg=color223,bg=color237] #D #[fg=color246,bg=color237,bold] %a %B %d %Y \
-#[fg=color109,bold] %H:%M ⏳ "
-
-setw -g history-limit 1024 
+set -g status-left "#[,bold,reverse]#{?client_prefix,#[fg=red],} 🚽 #S #{?window_zoomed_flag, 📣 ,} ⚡ #(uptime|cut -f4 -d' ')d  #[,default]#{?client_prefix,#[fg=red],#[fg=default]} "
+set -g status-right "#[,bold,reverse] #D  📅 %A %B %d %Y  ⏳ %H:%M #[,default,bold] #h 💻 "
