--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,5 +26,5 @@ set -g status-right-length 151
 set -g status-bg color0
 set -g status-fg color231
 
-set -g status-left "#[,bold,reverse]#{?client_prefix,#[fg=red],} 🚽 #S #{?window_zoomed_flag, 📣 ,} ⚡ #(uptime|cut -f4 -d' ')d  #[,default]#{?client_prefix,#[fg=red],#[fg=default]} "
-set -g status-right "#[,bold,reverse] #D  📅 %A %B %d %Y  ⏳ %H:%M #[,default,bold] #h 💻 "
+set -g status-left "#[,bold] 💻 #h #[,reverse]#{?client_prefix,#[fg=red],} 🚽 #S #{?window_zoomed_flag, 📣 ,} ⚡ #(uptime|cut -f4 -d' ')d  #[,default]#{?client_prefix,#[fg=red],#[fg=default]} "
+set -g status-right "#[,bold,reverse] #D  📅 %A %B %d %Y  ⏳ %H:%M #[,default,bold]👀"
