--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,4 +27,4 @@ set -g status-bg color234
 set -g status-fg color231
 
 set -g status-left "#[,bold] 💻 #h #[,reverse]#{?client_prefix,#[fg=red],} 🚽 #S #{?window_zoomed_flag, 📣 ,} ⚡ #(uptime|cut -f4-5 -d' '|cut -f1 -d','|tr -d ' ')  #[,default]#{?client_prefix,#[fg=red],#[fg=default]} "
-set -g status-right "#[,bold,reverse] #D  📅 %A %B %d %Y  ⏳ %H:%M #[,default,bold]👀"
+set -g status-right "#[,bold,reverse] #D  📅 %A %B %d %Y  ⏳ %H:%M #[,default,bold]"
