--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,8 +23,7 @@ set -g pane-base-index 1
 set -g status-interval 3
 set -g status-left-length 76
 set -g status-right-length 151
-set -g status-bg color234
-set -g status-fg color231
+set -g status-style fg=color234,bg=color231
 
 set -g status-left "#[,bold] 💻 #h #[,reverse]#{?client_prefix,#[fg=red],} 🚽 #S #{?window_zoomed_flag, 📣 ,} ⚡  #[,default]#{?client_prefix,#[fg=red],#[fg=default]} "
 set -g status-right "#[,bold,reverse] #D  📅 %A %B %d %Y  ⏳ %H:%M #[,default,bold]"
