--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,8 @@ set-option -g set-titles on
 set -g base-index 1
 set -g pane-base-index 1
 
+bind M-a set-option -g status-style bg=color234,fg=green
+bind M-s set-option -g status-style fg=color234,bg=color231
 set -g status-interval 3
 set -g status-left-length 76
 set -g status-right-length 151
