--- a/.gitconfig
+++ b/.gitconfig
@@ -7,8 +7,10 @@
 	br = branch
 	co = checkout
 	ct = commit
-	gl = log --all --graph --decorate --format=gline --date=format:%d.%m.%y|%H:%M
+	gl = log --all --graph --decorate --format=gl --date=format:%d.%m.%y|%H:%M
+	gls = log --all --graph --decorate --format=gls --date=format:%d.%m.%y|%H:%M
 [tag]
 	sort = -creatordate
 [pretty]
-	gline = "%C(auto)%h%d %s [%cn; %C(yellow)%cr%C(auto) %C(red)%cd%C(auto)]"
+	gl = "%C(auto)%h%d %s [%cn; %C(yellow)%cr%C(auto) %C(red)%cd%C(auto)]"
+	gls = "%C(auto)%h%d %s {%C(yellow)%cn%C(auto) %C(red)%cd%C(auto)"
