.mpv/input.conf -> windw-scale x3 & x4

--- a/.mpv/input.conf
+++ b/.mpv/input.conf
@@ -18,13 +18,11 @@ CTRL+j cycle secondary-sid
 
 UP seek 180
 DOWN seek -180
-RIGHT seek 25
-LEFT seek -25
+RIGHT seek 7
+LEFT seek -7
 
-º set current-window-scale 0.5
-¡ set current-window-scale 1.0
-€ set current-window-scale 2.0
-¢ set current-window-scale 0.25
+Alt+3 set current-window-scale 3.0
+Alt+4 set current-window-scale 4.0
 
 y cycle-values video-rotate 270 180 90 0
 n cycle-values osd-level 1 2 3
