--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -1,5 +1,6 @@
 ###ytdl=no
-###ytdl-raw-options=proxy=http://172.16.0.31:3128
+###ytdl-raw-options=proxy=http://z:3128
+ytdl-format=18,22
 ontop=yes
 speed=1.46
 hwdec=auto
