.mpv/mpv.conf ->

--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -35,8 +35,9 @@ osd-bar-h=3.215
 osd-bar-w=61
 osd-on-seek=msg-bar
 ###osd-font=URW Gothic
+osd-font=Fira Code
 osd-playing-msg='Playing: ${filename}'
-osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  [${percent-pos}%]  ${frame-drop-count}  ${cache-speed}   [${file-size:}]\n${filename}'
+osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  x${speed}  [${percent-pos}%]  ${frame-drop-count}  ${cache-speed}   [${file-size:}]\n${filename}'
 
 term-osd=force
 term-osd-bar=no
