--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -37,7 +37,7 @@ osd-on-seek=msg-bar
 ###osd-font=URW Gothic
 osd-font=Fira Code
 osd-playing-msg='Playing: ${filename}'
-osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  x${speed}  [${percent-pos}%]  ${frame-drop-count}  ${cache-speed}   [${file-size:}]\n${filename}'
+osd-msg3='${osd-sym-cc} ${time-pos}/${duration}  x${speed}  [${percent-pos}%]  ${frame-drop-count}  ${cache-speed}   [${file-size:}]'
 
 term-osd=force
 term-osd-bar=no
