.mpv/mpv.conf -> geometry & window-scale

--- a/.mpv/mpv.conf
+++ b/.mpv/mpv.conf
@@ -9,8 +9,8 @@ hwdec=auto
 watch-later-options-append=hwdec
 save-position-on-quit
 use-filedir-conf
-geometry=-0+0
-#window-scale=0.5
+geometry=-64+64
+window-scale=2
 
 ###ao=jack
 volume=70
